--- a/site.html
+++ b/site.html
@@ -28,17 +28,17 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:#080E1A;position:relative;overflow:hidden;padding:52px 20px 44px;text-align:center}
-.hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 50% 80%,rgba(43,125,233,0.15) 0%,transparent 60%),radial-gradient(ellipse at 20% 20%,rgba(6,182,212,0.08) 0%,transparent 50%),radial-gradient(ellipse at 80% 30%,rgba(43,125,233,0.06) 0%,transparent 40%);pointer-events:none}
-.hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='80' r='1.5' fill='%232B7DE9' opacity='0.3'/%3E%3Ccircle cx='120' cy='40' r='1' fill='%2306B6D4' opacity='0.25'/%3E%3Ccircle cx='200' cy='100' r='1.2' fill='%232B7DE9' opacity='0.2'/%3E%3Ccircle cx='300' cy='60' r='1' fill='%2306B6D4' opacity='0.3'/%3E%3Ccircle cx='350' cy='120' r='1.5' fill='%232B7DE9' opacity='0.15'/%3E%3Ccircle cx='80' cy='180' r='1' fill='%2306B6D4' opacity='0.2'/%3E%3Ccircle cx='250' cy='200' r='1.3' fill='%232B7DE9' opacity='0.25'/%3E%3Ccircle cx='150' cy='250' r='1' fill='%2306B6D4' opacity='0.15'/%3E%3Ccircle cx='320' cy='280' r='1.5' fill='%232B7DE9' opacity='0.2'/%3E%3Ccircle cx='40' cy='320' r='1' fill='%2306B6D4' opacity='0.25'/%3E%3Ccircle cx='380' cy='350' r='1.2' fill='%232B7DE9' opacity='0.15'/%3E%3Cline x1='50' y1='80' x2='120' y2='40' stroke='%232B7DE9' stroke-width='0.3' opacity='0.12'/%3E%3Cline x1='120' y1='40' x2='200' y2='100' stroke='%2306B6D4' stroke-width='0.3' opacity='0.08'/%3E%3Cline x1='200' y1='100' x2='300' y2='60' stroke='%232B7DE9' stroke-width='0.3' opacity='0.1'/%3E%3Cline x1='250' y1='200' x2='320' y2='280' stroke='%2306B6D4' stroke-width='0.3' opacity='0.08'/%3E%3C/svg%3E");opacity:0.6;pointer-events:none}
+.hero{background:linear-gradient(135deg,#1E3A8A 0%,#2563EB 40%,#3B82F6 70%,#60A5FA 100%);position:relative;overflow:hidden;padding:52px 20px 44px;text-align:center}
+.hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 50% 80%,rgba(255,255,255,0.08) 0%,transparent 60%);pointer-events:none}
+.hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='80' r='1.5' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='120' cy='40' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='200' cy='100' r='1.2' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='300' cy='60' r='1' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='350' cy='120' r='1.5' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='80' cy='180' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='250' cy='200' r='1.3' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='150' cy='250' r='1' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='320' cy='280' r='1.5' fill='%23fff' opacity='0.08'/%3E%3Cline x1='50' y1='80' x2='120' y2='40' stroke='%23fff' stroke-width='0.3' opacity='0.06'/%3E%3Cline x1='200' y1='100' x2='300' y2='60' stroke='%23fff' stroke-width='0.3' opacity='0.05'/%3E%3C/svg%3E");opacity:0.8;pointer-events:none}
 .hero-logo{position:relative;z-index:1;margin:0 auto 20px;animation:float 4s ease-in-out infinite,pulseGlow 3s ease-in-out infinite}
 .hero-logo svg{width:100px;height:120px}
 .hero-title{position:relative;z-index:1;font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
-.hero-auth{position:relative;z-index:1;font-size:0.75rem;color:rgba(43,125,233,0.8);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
-.hero-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,#2B7DE9,transparent);margin:12px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
+.hero-auth{position:relative;z-index:1;font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
+.hero-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.5),transparent);margin:12px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
 .hero-sub{position:relative;z-index:1;font-size:0.85rem;color:rgba(255,255,255,0.55);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
 .hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:24px;font-size:0.72rem;color:rgba(255,255,255,0.4);font-weight:500}
-.hero-stats span{background:rgba(43,125,233,0.1);border:1px solid rgba(43,125,233,0.2);padding:6px 14px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
+.hero-stats span{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.15);padding:6px 14px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
 .hero-stats span:nth-child(1){animation-delay:0.5s}
 .hero-stats span:nth-child(2){animation-delay:0.65s}
 .hero-stats span:nth-child(3){animation-delay:0.8s}
@@ -55,9 +55,9 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .hero-prop:nth-child(1){transition-delay:0.3s}
 .hero-prop:nth-child(2){transition-delay:0.5s}
 .hero-prop:nth-child(3){transition-delay:0.7s}
-.hero-prop-label{font-size:0.62rem;text-transform:uppercase;letter-spacing:1.5px;color:rgba(43,125,233,0.7);font-weight:600;border:1px solid rgba(43,125,233,0.3);display:inline-block;padding:3px 10px;border-radius:4px;margin-bottom:6px}
+.hero-prop-label{font-size:0.62rem;text-transform:uppercase;letter-spacing:1.5px;color:rgba(255,255,255,0.7);font-weight:600;border:1px solid rgba(255,255,255,0.25);display:inline-block;padding:3px 10px;border-radius:4px;margin-bottom:6px}
 .hero-prop-text{font-size:0.95rem;font-weight:800;color:#fff;letter-spacing:-0.3px}
-.hero-prop + .hero-prop::before{content:'✦';position:absolute;color:rgba(43,125,233,0.5);font-size:0.6rem;margin-left:-18px;margin-top:14px}
+.hero-prop + .hero-prop::before{content:'✦';position:absolute;color:rgba(255,255,255,0.35);font-size:0.6rem;margin-left:-18px;margin-top:14px}
 .hero-research{position:relative;z-index:1;font-size:0.68rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
 @media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.4rem}.hero-logo svg{width:80px;height:96px}.hero-props{gap:20px}.hero-prop-text{font-size:0.85rem}.hero-prop + .hero-prop::before{display:none}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
@@ -317,7 +317,7 @@ if (document.readyState === 'loading') {
 <!-- Neck ring -->
 <line x1="42" y1="38" x2="78" y2="38" stroke="#fff" stroke-width="0.8" opacity="0.5"/>
 <!-- PRC banner background -->
-<rect x="24" y="62" width="72" height="22" rx="3" fill="#0A1628" stroke="#2B7DE9" stroke-width="1.5"/>
+<rect x="24" y="62" width="72" height="22" rx="3" fill="rgba(255,255,255,0.15)" stroke="rgba(255,255,255,0.5)" stroke-width="1.5"/>
 <!-- PRC text -->
 <text x="60" y="79" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="18" letter-spacing="5">PRC</text>
 <defs><linearGradient id="glow1" x1="14" y1="18" x2="106" y2="126"><stop offset="0%" stop-color="#06B6D4"/><stop offset="50%" stop-color="#2B7DE9"/><stop offset="100%" stop-color="#1D4ED8"/></linearGradient></defs>
