--- a/site.html
+++ b/site.html
@@ -31,8 +31,8 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .hero{background:linear-gradient(135deg,#1E3A8A 0%,#2563EB 40%,#3B82F6 70%,#60A5FA 100%);position:relative;overflow:hidden;padding:52px 20px 44px;text-align:center}
 .hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 50% 80%,rgba(255,255,255,0.08) 0%,transparent 60%);pointer-events:none}
 .hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='80' r='1.5' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='120' cy='40' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='200' cy='100' r='1.2' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='300' cy='60' r='1' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='350' cy='120' r='1.5' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='80' cy='180' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='250' cy='200' r='1.3' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='150' cy='250' r='1' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='320' cy='280' r='1.5' fill='%23fff' opacity='0.08'/%3E%3Cline x1='50' y1='80' x2='120' y2='40' stroke='%23fff' stroke-width='0.3' opacity='0.06'/%3E%3Cline x1='200' y1='100' x2='300' y2='60' stroke='%23fff' stroke-width='0.3' opacity='0.05'/%3E%3C/svg%3E");opacity:0.8;pointer-events:none}
-.hero-logo{position:relative;z-index:1;margin:0 auto 20px;animation:float 4s ease-in-out infinite,pulseGlow 3s ease-in-out infinite}
-.hero-logo svg{width:100px;height:120px}
+.hero-logo{position:relative;z-index:1;margin:0 auto 20px;animation:pulseGlow 4s ease-in-out infinite}
+.hero-logo svg{width:110px;height:118px}
 .hero-title{position:relative;z-index:1;font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
 .hero-auth{position:relative;z-index:1;font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
 .hero-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.5),transparent);margin:12px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
@@ -57,9 +57,10 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .hero-prop:nth-child(3){transition-delay:0.7s}
 .hero-prop-label{font-size:0.62rem;text-transform:uppercase;letter-spacing:1.5px;color:rgba(255,255,255,0.7);font-weight:600;border:1px solid rgba(255,255,255,0.25);display:inline-block;padding:3px 10px;border-radius:4px;margin-bottom:6px}
 .hero-prop-text{font-size:0.95rem;font-weight:800;color:#fff;letter-spacing:-0.3px}
-.hero-prop + .hero-prop::before{content:'✦';position:absolute;color:rgba(255,255,255,0.35);font-size:0.6rem;margin-left:-18px;margin-top:14px}
+.hero-prop{border-left:1px solid rgba(255,255,255,0.15);padding-left:28px}
+.hero-prop:first-child{border-left:none;padding-left:0}
 .hero-research{position:relative;z-index:1;font-size:0.68rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
-@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.4rem}.hero-logo svg{width:80px;height:96px}.hero-props{gap:20px}.hero-prop-text{font-size:0.85rem}.hero-prop + .hero-prop::before{display:none}}
+@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.4rem}.hero-logo svg{width:90px;height:96px}.hero-props{gap:0}.hero-prop{border-left:none;padding-left:0;padding:12px 0;border-bottom:1px solid rgba(255,255,255,0.1)}.hero-prop:last-child{border-bottom:none}.hero-prop-text{font-size:0.85rem}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -302,25 +303,25 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><svg viewBox="0 0 120 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+<div class="hero-logo"><svg viewBox="0 0 140 150" fill="none" xmlns="http://www.w3.org/2000/svg">
+<!-- Outer oval glow -->
+<ellipse cx="70" cy="78" rx="52" ry="58" stroke="rgba(255,255,255,0.08)" stroke-width="8"/>
 <!-- Outer oval -->
-<ellipse cx="60" cy="72" rx="46" ry="54" stroke="url(#glow1)" stroke-width="2.5"/>
-<ellipse cx="60" cy="72" rx="46" ry="54" stroke="#2B7DE9" stroke-width="1" opacity="0.3"/>
-<!-- Vial body -->
-<path d="M42 38 L42 100 Q42 108 50 108 L70 108 Q78 108 78 100 L78 38" stroke="#fff" stroke-width="2.2" fill="none" stroke-linejoin="round"/>
+<ellipse cx="70" cy="78" rx="52" ry="58" stroke="#fff" stroke-width="2.5" opacity="0.9"/>
+<!-- Vial cap -->
+<rect x="52" y="18" width="36" height="10" rx="3" fill="rgba(255,255,255,0.2)" stroke="#fff" stroke-width="2"/>
+<!-- Cap rim line -->
+<line x1="52" y1="28" x2="88" y2="28" stroke="#fff" stroke-width="1.5" opacity="0.6"/>
 <!-- Vial neck -->
-<path d="M46 24 L46 38 L74 38 L74 24" stroke="#fff" stroke-width="2" fill="none"/>
-<!-- Vial cap/rim -->
-<rect x="44" y="20" width="32" height="6" rx="2" stroke="#fff" stroke-width="1.8" fill="none"/>
-<!-- Cap line -->
-<line x1="46" y1="23" x2="74" y2="23" stroke="#fff" stroke-width="0.8" opacity="0.4"/>
-<!-- Neck ring -->
-<line x1="42" y1="38" x2="78" y2="38" stroke="#fff" stroke-width="0.8" opacity="0.5"/>
-<!-- PRC banner background -->
-<rect x="24" y="62" width="72" height="22" rx="3" fill="rgba(255,255,255,0.15)" stroke="rgba(255,255,255,0.5)" stroke-width="1.5"/>
+<rect x="56" y="28" width="28" height="12" fill="none" stroke="#fff" stroke-width="2"/>
+<!-- Vial body -->
+<path d="M48 40 L48 106 Q48 114 56 114 L84 114 Q92 114 92 106 L92 40 Z" fill="rgba(255,255,255,0.08)" stroke="#fff" stroke-width="2.5" stroke-linejoin="round"/>
+<!-- Vial shoulder line -->
+<line x1="48" y1="40" x2="92" y2="40" stroke="#fff" stroke-width="1" opacity="0.4"/>
+<!-- PRC banner -->
+<rect x="26" y="66" width="88" height="26" rx="4" fill="rgba(255,255,255,0.2)" stroke="#fff" stroke-width="2"/>
 <!-- PRC text -->
-<text x="60" y="79" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="18" letter-spacing="5">PRC</text>
-<defs><linearGradient id="glow1" x1="14" y1="18" x2="106" y2="126"><stop offset="0%" stop-color="#06B6D4"/><stop offset="50%" stop-color="#2B7DE9"/><stop offset="100%" stop-color="#1D4ED8"/></linearGradient></defs>
+<text x="70" y="85" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="22" letter-spacing="6">PRC</text>
 </svg></div>
 <div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
 <div class="hero-auth">The Peptide Authority</div>
