--- a/site.html
+++ b/site.html
@@ -12,10 +12,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 @keyframes fadeUp{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeUpDelay1{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeUpDelay2{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-@keyframes pulseGlow{0%,100%{filter:drop-shadow(0 0 8px rgba(43,125,233,0.4)) drop-shadow(0 0 20px rgba(43,125,233,0.2))}50%{filter:drop-shadow(0 0 16px rgba(43,125,233,0.7)) drop-shadow(0 0 40px rgba(43,125,233,0.3))}}
-@keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-8px)}}
-@keyframes dotFloat1{0%,100%{transform:translate(0,0);opacity:0.3}25%{transform:translate(10px,-15px);opacity:0.6}50%{transform:translate(-5px,-25px);opacity:0.4}75%{transform:translate(-15px,-10px);opacity:0.5}}
-@keyframes dotFloat2{0%,100%{transform:translate(0,0);opacity:0.2}33%{transform:translate(-12px,10px);opacity:0.5}66%{transform:translate(8px,-8px);opacity:0.3}}
+@keyframes subtleGlow{0%,100%{opacity:0.7}50%{opacity:1}}
 @keyframes lineGrow{from{width:0}to{width:60px}}
 @keyframes statPop{from{opacity:0;transform:scale(0.8)}to{opacity:1;transform:scale(1)}}
 .animate-in{opacity:0;transform:translateY(20px);transition:opacity 0.6s ease-out,transform 0.6s ease-out}
@@ -28,39 +25,34 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(135deg,#1E3A8A 0%,#2563EB 40%,#3B82F6 70%,#60A5FA 100%);position:relative;overflow:hidden;padding:52px 20px 44px;text-align:center}
-.hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 50% 80%,rgba(255,255,255,0.08) 0%,transparent 60%);pointer-events:none}
-.hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='80' r='1.5' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='120' cy='40' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='200' cy='100' r='1.2' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='300' cy='60' r='1' fill='%23fff' opacity='0.12'/%3E%3Ccircle cx='350' cy='120' r='1.5' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='80' cy='180' r='1' fill='%23fff' opacity='0.08'/%3E%3Ccircle cx='250' cy='200' r='1.3' fill='%23fff' opacity='0.1'/%3E%3Ccircle cx='150' cy='250' r='1' fill='%23fff' opacity='0.06'/%3E%3Ccircle cx='320' cy='280' r='1.5' fill='%23fff' opacity='0.08'/%3E%3Cline x1='50' y1='80' x2='120' y2='40' stroke='%23fff' stroke-width='0.3' opacity='0.06'/%3E%3Cline x1='200' y1='100' x2='300' y2='60' stroke='%23fff' stroke-width='0.3' opacity='0.05'/%3E%3C/svg%3E");opacity:0.8;pointer-events:none}
-.hero-logo{position:relative;z-index:1;margin:0 auto 20px;animation:pulseGlow 4s ease-in-out infinite}
-.hero-logo svg{width:110px;height:118px}
-.hero-title{position:relative;z-index:1;font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
-.hero-auth{position:relative;z-index:1;font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
-.hero-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.5),transparent);margin:12px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
-.hero-sub{position:relative;z-index:1;font-size:0.85rem;color:rgba(255,255,255,0.55);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
-.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:24px;font-size:0.72rem;color:rgba(255,255,255,0.4);font-weight:500}
-.hero-stats span{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.15);padding:6px 14px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
+.hero{background:linear-gradient(160deg,#0F2557 0%,#1E3A8A 30%,#2563EB 65%,#3B82F6 100%);position:relative;overflow:hidden;padding:56px 20px 48px;text-align:center}
+.hero::before{content:'';position:absolute;top:-50%;right:-30%;width:80%;height:200%;background:radial-gradient(ellipse,rgba(59,130,246,0.2) 0%,transparent 70%);pointer-events:none}
+.hero::after{content:'';position:absolute;bottom:-40%;left:-20%;width:60%;height:150%;background:radial-gradient(ellipse,rgba(6,182,212,0.1) 0%,transparent 70%);pointer-events:none}
+.hero-logo{position:relative;z-index:1;margin:0 auto 24px;animation:subtleGlow 3s ease-in-out infinite}
+.hero-logo svg{width:100px;height:108px}
+.hero-title{position:relative;z-index:1;font-size:1.85rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.15;animation:fadeUp 0.8s ease-out}
+.hero-auth{position:relative;z-index:1;font-size:0.7rem;color:rgba(255,255,255,0.45);text-transform:uppercase;letter-spacing:3px;margin-top:10px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
+.hero-line{width:50px;height:1.5px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.4),transparent);margin:14px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
+.hero-props{position:relative;z-index:1;display:flex;justify-content:center;gap:0;margin-top:32px;animation:fadeUpDelay1 0.8s ease-out 0.35s backwards}
+.hero-prop{text-align:center;flex:1;max-width:160px;padding:0 16px}
+.hero-prop-icon{font-size:1.3rem;margin-bottom:6px;display:block;opacity:0.9}
+.hero-prop-label{font-size:0.58rem;text-transform:uppercase;letter-spacing:1.2px;color:rgba(255,255,255,0.5);font-weight:600;margin-bottom:4px;display:block}
+.hero-prop-text{font-size:0.82rem;font-weight:800;color:#fff;line-height:1.2}
+.hero-prop+.hero-prop{border-left:1px solid rgba(255,255,255,0.12)}
+.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:20px;flex-wrap:wrap;margin-top:28px;font-size:0.72rem;color:rgba(255,255,255,0.45);font-weight:500}
+.hero-stats span{animation:statPop 0.5s ease-out backwards}
 .hero-stats span:nth-child(1){animation-delay:0.5s}
-.hero-stats span:nth-child(2){animation-delay:0.65s}
-.hero-stats span:nth-child(3){animation-delay:0.8s}
-.hero-stats span:nth-child(4){animation-delay:0.95s}
-.hero-stats strong{color:rgba(255,255,255,0.9)}
+.hero-stats span:nth-child(2){animation-delay:0.6s}
+.hero-stats span:nth-child(3){animation-delay:0.7s}
+.hero-stats span:nth-child(4){animation-delay:0.8s}
+.hero-stats strong{color:#fff;font-size:1.1rem;display:block;margin-bottom:1px}
 .hero-btns{position:relative;z-index:1;margin-top:28px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
-.btn-primary{background:linear-gradient(135deg,#2B7DE9,#1D6AD4);color:#fff;border:none;padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease,background 0.2s ease;box-shadow:0 2px 12px rgba(43,125,233,0.3)}
-.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(43,125,233,0.4);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
-.btn-primary:hover{background:linear-gradient(135deg,#3B8BF5,#2B7DE9);transform:scale(1.05);box-shadow:0 4px 20px rgba(43,125,233,0.4)}
-.btn-outline:hover{border-color:#2B7DE9;transform:scale(1.05);box-shadow:0 2px 12px rgba(43,125,233,0.2)}
-.hero-props{position:relative;z-index:1;display:flex;justify-content:center;gap:28px;flex-wrap:wrap;margin-top:28px}
-.hero-prop{text-align:center;opacity:0;transform:translateY(15px);transition:opacity 0.5s ease,transform 0.5s ease}
-.hero-prop.visible{opacity:1;transform:translateY(0)}
-.hero-prop:nth-child(1){transition-delay:0.3s}
-.hero-prop:nth-child(2){transition-delay:0.5s}
-.hero-prop:nth-child(3){transition-delay:0.7s}
-.hero-prop-label{font-size:0.62rem;text-transform:uppercase;letter-spacing:1.5px;color:rgba(255,255,255,0.7);font-weight:600;border:1px solid rgba(255,255,255,0.25);display:inline-block;padding:3px 10px;border-radius:4px;margin-bottom:6px}
-.hero-prop-text{font-size:0.95rem;font-weight:800;color:#fff;letter-spacing:-0.3px}
-.hero-prop{border-left:1px solid rgba(255,255,255,0.15);padding-left:28px}
-.hero-prop:first-child{border-left:none;padding-left:0}
-.hero-research{position:relative;z-index:1;font-size:0.68rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
-@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.4rem}.hero-logo svg{width:90px;height:96px}.hero-props{gap:0}.hero-prop{border-left:none;padding-left:0;padding:12px 0;border-bottom:1px solid rgba(255,255,255,0.1)}.hero-prop:last-child{border-bottom:none}.hero-prop-text{font-size:0.85rem}}
+.btn-primary{background:#fff;color:#1E3A8A;border:none;padding:12px 28px;border-radius:8px;font-size:0.82rem;font-weight:800;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease;box-shadow:0 2px 12px rgba(0,0,0,0.15)}
+.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:11px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
+.btn-primary:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.2)}
+.btn-outline:hover{border-color:#fff;transform:translateY(-2px)}
+.hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.2);font-style:italic;margin-top:28px;letter-spacing:0.5px}
+@media(max-width:640px){.hero{padding:40px 16px 36px}.hero-title{font-size:1.5rem}.hero-logo svg{width:80px;height:86px}.hero-props{flex-direction:column;gap:0;align-items:center;max-width:240px;margin-left:auto;margin-right:auto}.hero-prop{max-width:none;width:100%;padding:14px 0}.hero-prop+.hero-prop{border-left:none;border-top:1px solid rgba(255,255,255,0.1)}.hero-stats{gap:12px}.hero-stats strong{font-size:1rem;display:inline;margin:0}.hero-stats span{display:inline}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -80,7 +72,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 @keyframes shimmer{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
 .res-banner h3{font-size:1.1rem;font-weight:800;margin-bottom:6px}
 .res-banner p{font-size:0.8rem;color:rgba(255,255,255,0.7);margin-bottom:16px;line-height:1.5}
-.res-banner .btn-primary{font-size:0.78rem;padding:8px 20px}
+.res-banner .btn-primary{font-size:0.78rem;padding:8px 20px;background:#fff;color:#1E3A8A}
 .quick-grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:32px}
 @media(min-width:768px){.quick-grid{grid-template-columns:1fr 1fr 1fr 1fr}}
 .quick-tile{background:#f8f9fa;border:1px solid #e5e7eb;border-radius:10px;padding:16px;text-align:center;cursor:pointer;text-decoration:none;color:#1a1a2e;transition:all 0.3s ease}
@@ -303,39 +295,27 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><svg viewBox="0 0 140 150" fill="none" xmlns="http://www.w3.org/2000/svg">
-<!-- Outer oval glow -->
-<ellipse cx="70" cy="78" rx="52" ry="58" stroke="rgba(255,255,255,0.08)" stroke-width="8"/>
-<!-- Outer oval -->
-<ellipse cx="70" cy="78" rx="52" ry="58" stroke="#fff" stroke-width="2.5" opacity="0.9"/>
-<!-- Vial cap -->
-<rect x="52" y="18" width="36" height="10" rx="3" fill="rgba(255,255,255,0.2)" stroke="#fff" stroke-width="2"/>
-<!-- Cap rim line -->
-<line x1="52" y1="28" x2="88" y2="28" stroke="#fff" stroke-width="1.5" opacity="0.6"/>
-<!-- Vial neck -->
-<rect x="56" y="28" width="28" height="12" fill="none" stroke="#fff" stroke-width="2"/>
-<!-- Vial body -->
-<path d="M48 40 L48 106 Q48 114 56 114 L84 114 Q92 114 92 106 L92 40 Z" fill="rgba(255,255,255,0.08)" stroke="#fff" stroke-width="2.5" stroke-linejoin="round"/>
-<!-- Vial shoulder line -->
-<line x1="48" y1="40" x2="92" y2="40" stroke="#fff" stroke-width="1" opacity="0.4"/>
-<!-- PRC banner -->
-<rect x="26" y="66" width="88" height="26" rx="4" fill="rgba(255,255,255,0.2)" stroke="#fff" stroke-width="2"/>
-<!-- PRC text -->
-<text x="70" y="85" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="22" letter-spacing="6">PRC</text>
+<div class="hero-logo"><svg viewBox="0 0 120 130" fill="none" xmlns="http://www.w3.org/2000/svg">
+<ellipse cx="60" cy="68" rx="48" ry="52" stroke="#fff" stroke-width="2" opacity="0.85"/>
+<rect x="46" y="14" width="28" height="8" rx="2.5" fill="rgba(255,255,255,0.15)" stroke="#fff" stroke-width="1.5"/>
+<rect x="49" y="22" width="22" height="10" fill="none" stroke="#fff" stroke-width="1.5"/>
+<path d="M43 32 L43 98 Q43 106 51 106 L69 106 Q77 106 77 98 L77 32 Z" fill="rgba(255,255,255,0.06)" stroke="#fff" stroke-width="2" stroke-linejoin="round"/>
+<rect x="22" y="58" width="76" height="22" rx="3" fill="rgba(0,0,0,0.25)" stroke="#fff" stroke-width="1.5"/>
+<text x="60" y="74" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="17" letter-spacing="5">PRC</text>
 </svg></div>
 <div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
 <div class="hero-props">
-<div class="hero-prop animate-in"><div class="hero-prop-label">Direct Sourcing</div><div class="hero-prop-text">Stop Overpaying</div></div>
-<div class="hero-prop animate-in"><div class="hero-prop-label">Quality Assurance</div><div class="hero-prop-text">Purity Guaranteed</div></div>
-<div class="hero-prop animate-in"><div class="hero-prop-label">Risk-Free</div><div class="hero-prop-text">Money-Back Guarantee</div></div>
+<div class="hero-prop"><span class="hero-prop-icon">&#9878;</span><span class="hero-prop-label">Direct Sourcing</span><span class="hero-prop-text">Stop Overpaying</span></div>
+<div class="hero-prop"><span class="hero-prop-icon">&#9733;</span><span class="hero-prop-label">Quality Assurance</span><span class="hero-prop-text">Purity Guaranteed</span></div>
+<div class="hero-prop"><span class="hero-prop-icon">&#10003;</span><span class="hero-prop-label">Risk-Free</span><span class="hero-prop-text">Money-Back Guarantee</span></div>
 </div>
 <div class="hero-stats">
 <span><strong>44+</strong> Products</span>
-<span><strong>393</strong> Vendors Reviewed</span>
+<span><strong>393</strong> Vendors</span>
 <span><strong>10</strong> Categories</span>
-<span><strong>Updated</strong> Feb 2026</span>
+<span><strong>2026</strong> Updated</span>
 </div>
 <div class="hero-btns">
 <label for="tab-shop" class="btn-primary" onclick="switchTab('tab-shop');return false">Shop Peptides</label>
