--- a/site.html
+++ b/site.html
@@ -296,13 +296,13 @@ if (document.readyState === 'loading') {
 
 <section class="hero">
 <div class="hero-logo"><img src="logo.jpg" alt="PRC Logo" style="width:110px;height:auto;border-radius:4px"></div>
-<div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
+<div class="hero-title">PEPTIDE RESOURCE CENTER</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
 <div class="hero-props">
-<div class="hero-prop"><span class="hero-prop-icon">&#9878;</span><span class="hero-prop-label">Direct Sourcing</span><span class="hero-prop-text">Stop Overpaying</span></div>
-<div class="hero-prop"><span class="hero-prop-icon">&#9733;</span><span class="hero-prop-label">Quality Assurance</span><span class="hero-prop-text">Purity Guaranteed</span></div>
-<div class="hero-prop"><span class="hero-prop-icon">&#10003;</span><span class="hero-prop-label">Risk-Free</span><span class="hero-prop-text">Money-Back Guarantee</span></div>
+<div class="hero-prop"><span class="hero-prop-label">Vendor Directory</span><span class="hero-prop-text">393 Vendors Reviewed</span></div>
+<div class="hero-prop"><span class="hero-prop-label">Price Comparison</span><span class="hero-prop-text">387 Products Tracked</span></div>
+<div class="hero-prop"><span class="hero-prop-label">Education</span><span class="hero-prop-text">Research-Grade Info</span></div>
 </div>
 <div class="hero-stats">
 <span><strong>44+</strong> Products</span>
@@ -311,9 +311,9 @@ if (document.readyState === 'loading') {
 <span><strong>2026</strong> Updated</span>
 </div>
 <div class="hero-btns">
-<label for="tab-shop" class="btn-primary" onclick="switchTab('tab-shop');return false">Shop Peptides</label>
+<label for="tab-resources" class="btn-primary" onclick="switchTab('tab-resources');return false">Explore Resources</label>
 <label for="tab-vendors" class="btn-outline" onclick="switchTab('tab-vendors');return false">Vendor Directory</label>
-<label for="tab-resources" class="btn-outline" onclick="switchTab('tab-resources');return false">Explore Resources</label>
+<label for="tab-shop" class="btn-outline" onclick="switchTab('tab-shop');return false">Shop Peptides</label>
 </div>
 <div class="hero-research">For Research Use Only.</div>
 </section>
